Se agrega fase identificadora de entrada o salida